--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,18 @@
 {
-"manifest_version": 2,
-"name": "Dark Mode for Chrome",
-"version": "1.0",
-"description": "Turns web pages into dark mode.",
-"permissions": ["activeTab"],
-"browser_action": {
-    "default_icon": "icon.png"
-},
-"background": {
-    "scripts": ["background.js"],
-    "persistent": false
-},
-"content_scripts": [
-    {
-    "matches": ["<all_urls>"],
-    "css": ["dark_mode.css"],
-    "js": ["content.js"]
-    }
-]
-}
+    "manifest_version": 3,
+    "name": "Dark Mode for Chrome",
+    "version": "1.0",
+    "description": "Turns web pages into dark mode.",
+    "permissions": ["activeTab", "scripting"],
+    "host_permissions": ["<all_urls>"],
+    "action": {},
+    "background": {
+      "service_worker": "background.js"
+    },
+    "content_scripts": [
+      {
+        "matches": ["<all_urls>"],
+        "css": ["dark_mode.css"]
+      }
+    ]
+  }
