Dark Mode for Chrome 拡張機能の変更を追加***
このコミットには、Dark Mode for Chrome 拡張機能に関する変更が含まれています。拡張機能のマニフェストファイル、バックグラウンドスクリプト、コンテンツスクリプト、スタイルシート、オプションページのファイルが変更されました。また、ダークモードの状態を保存するためにストレージが使用されています。さらに、ダークモードのオン/オフを切り替えるためのアイコンのクリックイベントや他のタブへの変更の反映など、機能の改善も行われています。

--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,13 @@
     "manifest_version": 3,
     "name": "Dark Mode for Chrome",
     "version": "1.0",
-    "description": "ウェブページをダークモードに変更します。",
+    "description": "Turns web pages into dark mode.",
     "permissions": ["activeTab", "scripting", "storage"],
     "host_permissions": ["<all_urls>"],
-    "action": {},
+    "action": {
+      "default_icon": "icon.png",
+      "default_title": "Toggle Dark Mode"
+    },
     "background": {
       "service_worker": "background.js"
     },
